Começando a deixar o projeto responsivot

--- a/apoie.html
+++ b/apoie.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/apoie.css">
+  <link rel="stylesheet" href="./css/apoieXS.css">
+  <link rel="stylesheet" href="./css/apoieSM.css">
   <title>Participe da Causa</title>
 </head>
 <body>
@@ -74,7 +76,7 @@
     <h2>RM dos Integrantes</h2>
 
     <div class="footer-class">
-      <ul>
+      <ul class="nomes">
         <li>Maria Fernanda Ribeiro Mello - 98818</li>
         <li>Nicolas Reis do Espirito Santo - 98819</li>
         <li>Gabrielle da Silva Stanguini - 98786</li>
