--- a/form1.html
+++ b/form1.html
@@ -28,6 +28,11 @@
             </div>
 
             <div class="form-group">
+              <label for="endereco">CNPJ</label>
+              <textarea id="endereco" name="endereco" required></textarea>
+          </div>
+
+            <div class="form-group">
                 <label for="telefone">Telefone:</label>
                 <input type="text" id="telefone" name="telefone" required>
             </div>
