--- a/form2.html
+++ b/form2.html
@@ -28,6 +28,11 @@
             </div>
 
             <div class="form-group">
+              <label for="email">CNPJ</label>
+              <input type="email" id="email" name="email" required>
+          </div>
+
+            <div class="form-group">
                 <label for="telefone">Telefone:</label>
                 <input type="text" id="telefone" name="telefone" required>
             </div>
