Atualizações nas telas responsivas

--- a/apoie.html
+++ b/apoie.html
@@ -71,7 +71,7 @@
 
   <footer>
 
-    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">-
+    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
 
     <h2>RM dos Integrantes</h2>
 
