--- a/pg_final.html
+++ b/pg_final.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/pg_final.css">
+  <link rel="stylesheet" href="./css/pg_finalXS.css">
+  <link rel="stylesheet" href="./css/pg_finalSM.css">
   <title>Página do Participante</title>
 </head>
 <body>
@@ -98,6 +100,5 @@
   </footer>
 
 
-  
 </body>
 </html>
