--- a/pg_final.html
+++ b/pg_final.html
@@ -34,7 +34,7 @@
 
     <aside>
       <img class="img-aside" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde dignissimos sed </p>
+      <p class="prg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde dignissimos sed </p>
 
 
 
@@ -67,12 +67,12 @@
 
   <footer>
 
-    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">-
+    <img class="img-footer" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
 
     <h2>RM dos Integrantes</h2>
 
     <div class="footer-class">
-      <ul>
+      <ul class="nomes">
         <li>Maria Fernanda Ribeiro Mello - 98818</li>
         <li>Nicolas Reis do Espirito Santo - 98819</li>
         <li>Gabrielle da Silva Stanguini - 98786</li>
@@ -98,7 +98,6 @@
 
 
   </footer>
-
 
 </body>
 </html>
