introduzi algumas coisas no JS

--- a/apoie.html
+++ b/apoie.html
@@ -19,8 +19,8 @@
       <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
 
       <ul class="lista">
-        <li><a href="">Contate-nos</a></li>
-        <li><a href="">Participe da Causa</a></li>
+        <li><a href="./form-contato.html">Contate-nos</a></li>
+        <li><a href="./apoie.html">Participe da Causa</a></li>
         <li><a href="">Cultivo Eficiente</a></li>
         <li><a href="">IA Generativa</a></li>
         <li><a href="">Agricultura Sustentável</a></li>
@@ -36,7 +36,7 @@
 
     <h1>Apoie Nosso Projeto</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic laboriosam molestias aliquid sed illum accusantium exercitationem debitis tempora! Consectetur fugiat laboriosam distinctio nisi cupiditate iste eos deserunt ea rem esse?</p>
+    <p>O <span class="span1">Eco</span><span class="span2">Byte</span> é uma iniciativa que visa conectar fornecedores de alimentos e as Secretarias de Ensino Municipal de um determinado município, a fim de direcionar alimentos excedentes das fazendas/locais de produção para as Secretarias, que fazem a distribuição para as escolas que forem cadastradas. Através de um site intuitivo e de fácil acesso, fornecedores e a Secretaria de Ensino poderão se cadastrar, permitindo uma distribuição eficiente e direcionada, contribuindo para o combate à fome e a redução do desperdício alimentar</p>
 
   </section>
 
@@ -50,14 +50,14 @@
         <div class="quadrado-info">
           <img class="img" src="./img/image 2.png" alt="">
           <h2>Formulário do Agricultor</h2>
-          <p>Aqui vai ter uma descrição falando quem deve preencher este formulario em especifico</p>
+          <p>O primeiro passo para participar do projeto é o cadastro de você fornecedor no site. Aqui será pedido informações sobre suas fazendas/locais de produção incluindo a localização geográfica e etc.</p>
           <a class="botao" href="/">Preencher</a>
         </div>
         
         <div class="quadrado-info">
           <img class="img" src="./img/image 4.png" alt="">
           <h2>Formulário da Secretaria</h2>
-          <p>Aqui vai ter uma descrição falando quem deve preencher este formulario em especifico</p>
+          <p>Para você participar do projeto como Secretaria é necessário fazer o cadastro. Aqui será pedido informações sobre sua empresa  incluindo a localização geográfica, escolas que representa entre outras.</p>
           <a class="botao" href="/">Preencher</a>
         </div>  
 
@@ -85,8 +85,9 @@
       </ul>
 
       <ul class="links-footer">
-        <li><a href="">Contate-nos</a></li>
+        <li><a href="./form-contato.html">Contate-nos</a></li>
         <li><a href="">Cultivo Eficiente</a></li>
+        <li><a href="./apoie.html"> Participe da Causa</a></li>
         <li><a href="">IA Generativa</a></li>
         <li><a href="">Agricultura Sustentável</a></li>
         <li><a href="">Quem somos Nós</a></li>
