--- a/pg_final.html
+++ b/pg_final.html
@@ -58,7 +58,7 @@
         <li class="ja-cadastrado">Agricultor 3 - Itaquaquecetuba</li>
       </ul>
 
-      <p class="pg-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis fugiat, eaque impedit ipsam blanditiis cumque voluptatibus? Cumque quidem impedit nam, quia debitis inventore ut nemo ullam, doloribus, reiciendis excepturi.</p>
+      <p class="prg-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis fugiat, eaque impedit ipsam blanditiis cumque voluptatibus? Cumque quidem impedit nam, quia debitis inventore ut nemo ullam, doloribus, reiciendis excepturi.</p>
 
 
     </section>
@@ -81,8 +81,9 @@
       </ul>
 
       <ul class="links-footer">
-        <li><a href="">Contate-nos</a></li>
+        <li><a href="./form-contato.html">Contate-nos</a></li>
         <li><a href="">Cultivo Eficiente</a></li>
+        <li><a href="./apoie.html"> Participe da Causa</a></li>
         <li><a href="">IA Generativa</a></li>
         <li><a href="">Agricultura Sustentável</a></li>
         <li><a href="">Quem somos Nós</a></li>
