--- a/apoie.html
+++ b/apoie.html
@@ -16,7 +16,7 @@
 
   <header>
     <nav class="links">
-      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
+      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""><a>
 
       <ul class="lista">
         <li><a href="./form-contato.html">Contate-nos</a></li>
@@ -26,6 +26,18 @@
         <li><a href="">Agricultura Sustentável</a></li>
       </ul>
 
+    </nav>
+
+    <nav class="hamburger-menu">
+      <input type="checkbox" id="menu_toggle">
+      <label class="menu_btn" for="menu_toggle"><span></span></label>
+      <ul class="menu_box">
+        <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
+        <li><a class="menu_item" href="#">IA Generativa</a></li>
+        <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+        <li><a class="menu_item" href="#">Participe da Cusa</a></li>
+        <li><a class="menu_item" href="#">Contate-nos</a></li>
+      </ul>
     </nav>
 
   </header>
