--- a/pg_final.html
+++ b/pg_final.html
@@ -27,6 +27,18 @@
 
     </nav>
 
+    <nav class="hamburger-menu">
+      <input type="checkbox" id="menu_toggle">
+      <label class="menu_btn" for="menu_toggle"><span></span></label>
+      <ul class="menu_box">
+        <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
+        <li><a class="menu_item" href="#">IA Generativa</a></li>
+        <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+        <li><a class="menu_item" href="#">Participe da Cusa</a></li>
+        <li><a class="menu_item" href="#">Contate-nos</a></li>
+      </ul>
+    </nav>
+
   </header>
 
   <main>
