Adição das Páginas que Estavam Faltando

--- a/apoie.html
+++ b/apoie.html
@@ -14,71 +14,73 @@
 </head>
 <body>
 
-  <header>
-    <nav class="links">
-      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""><a>
+  <main>
 
-      <ul class="lista">
-        <li><a href="./form-contato.html">Contate-nos</a></li>
-        <li><a href="./apoie.html">Participe da Causa</a></li>
-        <li><a href="">Cultivo Eficiente</a></li>
-        <li><a href="">IA Generativa</a></li>
-        <li><a href="">Agricultura Sustentável</a></li>
-      </ul>
+    <header>
+      <nav class="links">
+        <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""><a>
 
-    </nav>
+        <ul class="lista">
+          <li><a href="./form-contato.html">Contate-nos</a></li>
+          <li><a href="./apoie.html">Participe da Causa</a></li>
+          <li><a href="">Cultivo Eficiente</a></li>
+          <li><a href="">IA Generativa</a></li>
+          <li><a href="">Agricultura Sustentável</a></li>
+        </ul>
 
-    <nav class="hamburger-menu">
-      <input type="checkbox" id="menu_toggle">
-      <label class="menu_btn" for="menu_toggle"><span></span></label>
-      <ul class="menu_box">
-        <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
-        <li><a class="menu_item" href="#">IA Generativa</a></li>
-        <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
-        <li><a class="menu_item" href="#">Participe da Cusa</a></li>
-        <li><a class="menu_item" href="#">Contate-nos</a></li>
-      </ul>
-    </nav>
+      </nav>
 
-  </header>
+      <nav class="hamburger-menu">
+        <input type="checkbox" id="menu_toggle">
+        <label class="menu_btn" for="menu_toggle"><span></span></label>
+        <ul class="menu_box">
+          <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
+          <li><a class="menu_item" href="#">IA Generativa</a></li>
+          <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+          <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
+          <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
+        </ul>
+      </nav>
 
-  <img class="ft-principal" src="./img/generate an ima 1.png" alt="">
+    </header>
 
-  <section class="sec1">
+    <img class="ft-principal" src="./img/generate an ima 1.png" alt="">
 
-    <h1>Apoie Nosso Projeto</h1>
+    <section class="sec1">
 
-    <p>O <span class="span1">Eco</span><span class="span2">Byte</span> é uma iniciativa que visa conectar fornecedores de alimentos e as Secretarias de Ensino Municipal de um determinado município, a fim de direcionar alimentos excedentes das fazendas/locais de produção para as Secretarias, que fazem a distribuição para as escolas que forem cadastradas. Através de um site intuitivo e de fácil acesso, fornecedores e a Secretaria de Ensino poderão se cadastrar, permitindo uma distribuição eficiente e direcionada, contribuindo para o combate à fome e a redução do desperdício alimentar</p>
+      <h1>Apoie Nosso Projeto</h1>
 
-  </section>
+      <p>O <span class="span1">Eco</span><span class="span2">Byte</span> é uma iniciativa que visa conectar fornecedores de alimentos e as Secretarias de Ensino Municipal de um determinado município, a fim de direcionar alimentos excedentes das fazendas/locais de produção para as Secretarias, que fazem a distribuição para as escolas que forem cadastradas. Através de um site intuitivo e de fácil acesso, fornecedores e a Secretaria de Ensino poderão se cadastrar, permitindo uma distribuição eficiente e direcionada, contribuindo para o combate à fome e a redução do desperdício alimentar</p>
+
+    </section>
 
 
-  <section class="sec2">
+    <section class="sec2">
 
-    <article>
+      <article>
 
-      <div class="conteudo">
+        <div class="conteudo">
 
-        <div class="quadrado-info">
-          <img class="img" src="./img/image 2.png" alt="">
-          <h2>Formulário do Agricultor</h2>
-          <p>O primeiro passo para participar do projeto é o cadastro de você fornecedor no site. Aqui será pedido informações sobre suas fazendas/locais de produção incluindo a localização geográfica e etc.</p>
-          <a class="botao" href="/">Preencher</a>
+          <div class="quadrado-info">
+            <img class="img" src="./img/image 2.png" alt="">
+            <h2>Formulário do Agricultor</h2>
+            <p>O primeiro passo para participar do projeto é o cadastro de você fornecedor no site. Aqui será pedido informações sobre suas fazendas/locais de produção incluindo a localização geográfica e etc.</p>
+            <a class="botao" href="/">Preencher</a>
+          </div>
+          
+          <div class="quadrado-info">
+            <img class="img" src="./img/image 4.png" alt="">
+            <h2>Formulário da Secretaria</h2>
+            <p>Para você participar do projeto como Secretaria é necessário fazer o cadastro. Aqui será pedido informações sobre sua empresa  incluindo a localização geográfica, escolas que representa, entre outras.</p>
+            <a class="botao" href="/">Preencher</a>
+          </div>  
+
         </div>
-        
-        <div class="quadrado-info">
-          <img class="img" src="./img/image 4.png" alt="">
-          <h2>Formulário da Secretaria</h2>
-          <p>Para você participar do projeto como Secretaria é necessário fazer o cadastro. Aqui será pedido informações sobre sua empresa  incluindo a localização geográfica, escolas que representa entre outras.</p>
-          <a class="botao" href="/">Preencher</a>
-        </div>  
 
-      </div>
+      </article>
 
-    </article>
-
-  </section>
-
+    </section>
+  </main>
   
 
   <footer>
@@ -89,10 +91,10 @@
 
     <div class="footer-class">
       <ul class="nomes">
-        <li>Maria Fernanda Ribeiro Mello - 98818</li>
-        <li>Nicolas Reis do Espirito Santo - 98819</li>
         <li>Gabrielle da Silva Stanguini - 98786</li>
         <li>Lucca Rinaldi Valladão de Freitas - 98207</li>
+        <li>Maria Fernanda Ribeiro Mello - 98818</li>
+        <li>Nicolas Reis do Espirito Santo - 98819</li>
         <li>Renan Vieira de Jesus - 551813</li>
       </ul>
 
@@ -102,7 +104,7 @@
         <li><a href="./apoie.html"> Participe da Causa</a></li>
         <li><a href="">IA Generativa</a></li>
         <li><a href="">Agricultura Sustentável</a></li>
-        <li><a href="">Quem somos Nós</a></li>
+        <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
       </ul>
 
     </div>
@@ -115,7 +117,7 @@
 
 
   </footer>
-
+  <script src="./Js/script.js"></script>
 
 </body>
 </html>
