--- a/form-contato.html
+++ b/form-contato.html
@@ -34,8 +34,8 @@
             <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
             <li><a class="menu_item" href="#">IA Generativa</a></li>
             <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
-            <li><a class="menu_item" href="#">Participe da Cusa</a></li>
-            <li><a class="menu_item" href="#">Contate-nos</a></li>
+            <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
+            <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
           </ul>
         </nav>
     
@@ -64,12 +64,12 @@
 
             <div class="form-group">
               <label for="estCivil">Estado Civil:</label>
-              <input type="text" id="estCivil" name="estCivil" required value="">
+              <input type="text" id="estCivil" name="estCivil" required>
             </div>
 
             <div class="form-group">
               <label for="telefone">Telefone:</label>
-              <input type="tel" id="telefone" name="telefone" required value="">
+              <input type="tel" id="telefone" name="telefone" required>
             </div>
 
             <div class="form-group">
@@ -131,7 +131,7 @@
           <li><a href="./apoie.html"> Participe da Causa</a></li>
           <li><a href="">IA Generativa</a></li>
           <li><a href="">Agricultura Sustentável</a></li>
-          <li><a href="">Quem somos Nós</a></li>
+          <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
         </ul>
   
       </div>
@@ -145,7 +145,8 @@
   
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/verificacao.js"></script>
+    <script src="./Js/script.js"></script>
 
   </body>
 </html>
