--- a/form2.html
+++ b/form2.html
@@ -34,8 +34,8 @@
             <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
             <li><a class="menu_item" href="#">IA Generativa</a></li>
             <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
-            <li><a class="menu_item" href="#">Participe da Cusa</a></li>
-            <li><a class="menu_item" href="#">Contate-nos</a></li>
+            <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
+            <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
           </ul>
         </nav>
     
@@ -54,7 +54,7 @@
 
             <div class="form-group">
               <label for="nomeR">Nome do Representante Legal:</label>
-              <input type="text" id="nomeR" name="nomeR" required value="Maria Fernanda">
+              <input type="text" id="nomeR" name="nomeR" required value="">
             </div>
 
             <div class="form-group">
@@ -125,6 +125,11 @@
                 </div>
             </div>
 
+            <div class="form-group">
+              <label for="alimento">Alimento que deseja doar:</label>
+              <textarea type="text" id="alimento" name="alimento" required></textarea>
+            </div>
+
           <div class="form-button">
             <a class="botao" href="/">Cadastrar</a>
           </div>
@@ -141,10 +146,10 @@
   
       <div class="footer-class">
         <ul class="nomes">
-          <li>Maria Fernanda Ribeiro Mello - 98818</li>
-          <li>Nicolas Reis do Espirito Santo - 98819</li>
           <li>Gabrielle da Silva Stanguini - 98786</li>
           <li>Lucca Rinaldi Valladão de Freitas - 98207</li>
+          <li>Maria Fernanda Ribeiro Mello - 98818</li>
+          <li>Nicolas Reis do Espirito Santo - 98819</li>
           <li>Renan Vieira de Jesus - 551813</li>
         </ul>
   
@@ -154,7 +159,7 @@
           <li><a href="./apoie.html"> Participe da Causa</a></li>
           <li><a href="">IA Generativa</a></li>
           <li><a href="">Agricultura Sustentável</a></li>
-          <li><a href="">Quem somos Nós</a></li>
+          <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
         </ul>
   
       </div>
@@ -167,6 +172,7 @@
   
   
     </footer>
+    <script src="./Js/script.js"></script>
 
   </body>
 </html>
