--- a/pg_final.html
+++ b/pg_final.html
@@ -13,67 +13,71 @@
 </head>
 <body>
 
-  <header>
-    <nav class="links">
-      <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
+  <main class="main1">
 
-      <ul class="lista">
-        <li><a href="">Contate-nos</a></li>
-        <li><a href="">Participe da Cusa</a></li>
-        <li><a href="">Cultivo Eficiente</a></li>
-        <li><a href="">IA Generativa</a></li>
-        <li><a href="">Agricultura Sustentável</a></li>
-      </ul>
+    <header>
+      <nav class="links">
+        <a class="Logo" href="./index.html"><img src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt=""></a>
 
-    </nav>
+        <ul class="lista">
+          <li><a href="./form-contato.html">Contate-nos</a></li>
+          <li><a href="./apoie.html">Participe da Cusa</a></li>
+          <li><a href="">Cultivo Eficiente</a></li>
+          <li><a href="">IA Generativa</a></li>
+          <li><a href="">Agricultura Sustentável</a></li>
+        </ul>
 
-    <nav class="hamburger-menu">
-      <input type="checkbox" id="menu_toggle">
-      <label class="menu_btn" for="menu_toggle"><span></span></label>
-      <ul class="menu_box">
-        <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
-        <li><a class="menu_item" href="#">IA Generativa</a></li>
-        <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
-        <li><a class="menu_item" href="#">Participe da Cusa</a></li>
-        <li><a class="menu_item" href="#">Contate-nos</a></li>
-      </ul>
-    </nav>
+      </nav>
 
-  </header>
+      <nav class="hamburger-menu">
+        <input type="checkbox" id="menu_toggle">
+        <label class="menu_btn" for="menu_toggle"><span></span></label>
+        <ul class="menu_box">
+          <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
+          <li><a class="menu_item" href="#">IA Generativa</a></li>
+          <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
+          <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
+          <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
+        </ul>
+      </nav>
 
-  <main>
+    </header>
 
-
-    <aside>
-      <img class="img-aside" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
-      <p class="prg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde dignissimos sed </p>
+    <main class="main2">
 
 
-
-    </aside>
-
-    <section>
-
-      <h1>Infomações Dos Nossos Apoiadores</h1>
-
-      <h2 class="title-1">Secretarias Municipais Que Fazem Parte</h2>
-      <ul class="lista2">
-        <li class="ja-cadastrado">Secretaria 1 - Mogi das Cruzes</li>
-        <li class="ja-cadastrado">Secretaria 2 - Arujá</li>
-        <li class="ja-cadastrado">Secretaria 3 - Itaquaquecetuba</li>
-      </ul>
-
-      <h2 class="title-2">Agricultores Que Fazem Parte</h2>
-      <ul class="lista2">
-        <li class="ja-cadastrado">Agricultor 1 - Mogi das Cruzes</li>
-        <li class="ja-cadastrado">Agricultor 2 - Arujá</li>
-        <li class="ja-cadastrado">Agricultor 3 - Itaquaquecetuba</li>
-      </ul>
-
-      <p class="prg-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis fugiat, eaque impedit ipsam blanditiis cumque voluptatibus? Cumque quidem impedit nam, quia debitis inventore ut nemo ullam, doloribus, reiciendis excepturi.</p>
+      <aside>
+        <img class="img-aside" src="./img/Captura_de_tela_2023-05-26_181458-removebg-preview 1.png" alt="">
+        <p class="prg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta unde dignissimos sed </p>
 
 
-    </section>
+
+      </aside>
+
+      <section>
+
+        <h1>Infomações Dos Nossos Apoiadores</h1>
+
+        <h2 class="title-1">Secretarias Municipais Que Fazem Parte</h2>
+        <ul class="lista2">
+          <li class="ja-cadastrado">Secretaria 1 - Mogi das Cruzes</li>
+          <li class="ja-cadastrado">Secretaria 2 - Arujá</li>
+          <li class="ja-cadastrado">Secretaria 3 - Itaquaquecetuba</li>
+        </ul>
+
+        <h2 class="title-2">Agricultores Que Fazem Parte</h2>
+        <ul class="lista2">
+          <li class="ja-cadastrado">Agricultor 1 - Mogi das Cruzes</li>
+          <li class="ja-cadastrado">Agricultor 2 - Arujá</li>
+          <li class="ja-cadastrado">Agricultor 3 - Itaquaquecetuba</li>
+        </ul>
+
+        <p class="prg-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis fugiat, eaque impedit ipsam blanditiis cumque voluptatibus? Cumque quidem impedit nam, quia debitis inventore ut nemo ullam, doloribus, reiciendis excepturi.</p>
+
+
+      </section>
+
+    </main>
 
   </main>
 
@@ -85,10 +89,10 @@
 
     <div class="footer-class">
       <ul class="nomes">
-        <li>Maria Fernanda Ribeiro Mello - 98818</li>
-        <li>Nicolas Reis do Espirito Santo - 98819</li>
         <li>Gabrielle da Silva Stanguini - 98786</li>
         <li>Lucca Rinaldi Valladão de Freitas - 98207</li>
+        <li>Maria Fernanda Ribeiro Mello - 98818</li>
+        <li>Nicolas Reis do Espirito Santo - 98819</li>
         <li>Renan Vieira de Jesus - 551813</li>
       </ul>
 
@@ -98,7 +102,7 @@
         <li><a href="./apoie.html"> Participe da Causa</a></li>
         <li><a href="">IA Generativa</a></li>
         <li><a href="">Agricultura Sustentável</a></li>
-        <li><a href="">Quem somos Nós</a></li>
+        <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
       </ul>
 
     </div>
@@ -111,6 +115,7 @@
 
 
   </footer>
+  <script src="./Js/script.js"></script>
 
 </body>
 </html>
