--- a/form1.html
+++ b/form1.html
@@ -34,8 +34,8 @@
             <li><a class="menu_item" href="#">Agricultura Sustentável</a></li>
             <li><a class="menu_item" href="#">IA Generativa</a></li>
             <li><a class="menu_item" href="#">Cultivo Eficiente</a></li>
-            <li><a class="menu_item" href="#">Participe da Cusa</a></li>
-            <li><a class="menu_item" href="#">Contate-nos</a></li>
+            <li><a class="menu_item" href="./apoie.html">Participe da Cusa</a></li>
+            <li><a class="menu_item" href="./form-contato.html">Contate-nos</a></li>
           </ul>
         </nav>
     
@@ -49,37 +49,37 @@
 
             <div class="form-group">
                 <label for="nome">Nome da Empresa:</label>
-                <input type="text" id="nome" name="nome" required value="Maria Fernanda">
+                <input type="text" id="nome" name="nome" required value="Pedacinho do Sabiá">
             </div>
 
             <div class="form-group">
               <label for="nome">Nome do Representante Legal:</label>
-              <input type="text" id="nome" name="nome" required value="Maria Fernanda">
+              <input type="text" id="nome" name="nome" required value="Rodrigo Fernando">
             </div>
 
             <div class="form-group">
               <label for="nome">CPF do Representante:</label>
-              <input type="text" id="nome" name="nome" required value="Maria Fernanda">
+              <input type="text" id="nome" name="nome" required value="00000000000">
             </div>
 
             <div class="form-group">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required value="rodrigo@gmail.com">
             </div>
 
             <div class="form-group">
               <label for="endereco">CNPJ da Empresa</label>
-              <input type="text" id="endereco" name="endereco" required>
+              <input type="text" id="endereco" name="endereco" required value="000000000000">
             </div>
 
             <div class="form-group">
                 <label for="telefone">Telefone:</label>
-                <input type="text" id="telefone" name="telefone" required>
+                <input type="text" id="telefone" name="telefone" required value="1199999-9999">
             </div>
 
             <div class="form-group">
                 <label for="endereco">Endereço:</label>
-                <input type="text" id="endereco" name="endereco" required>
+                <input type="text" id="endereco" name="endereco" required value="Rua Visconde de Mauá">
             </div>
 
             <div class="form-group">
@@ -125,20 +125,20 @@
   
       <div class="footer-class">
         <ul class="nomes">
-          <li>Maria Fernanda Ribeiro Mello - 98818</li>
-          <li>Nicolas Reis do Espirito Santo - 98819</li>
           <li>Gabrielle da Silva Stanguini - 98786</li>
           <li>Lucca Rinaldi Valladão de Freitas - 98207</li>
+          <li>Maria Fernanda Ribeiro Mello - 98818</li>
+          <li>Nicolas Reis do Espirito Santo - 98819</li>
           <li>Renan Vieira de Jesus - 551813</li>
         </ul>
   
         <ul class="links-footer">
-          <li><a href="">Contate-nos</a></li>
+          <li><a href="./form-contato.html">Contate-nos</a></li>
           <li><a href="">Cultivo Eficiente</a></li>
-          <li><a href=""> Participe da Causa</a></li>
+          <li><a href="./apoie.html"> Participe da Causa</a></li>
           <li><a href="">IA Generativa</a></li>
           <li><a href="">Agricultura Sustentável</a></li>
-          <li><a href="">Quem somos Nós</a></li>
+          <li><a href="./sobre-nos.html">Quem somos Nós</a></li>
         </ul>
   
       </div>
@@ -151,6 +151,7 @@
   
   
     </footer>
+    <script src="./Js/script.js"></script>
 
 
   </body>
